[tool.poetry]
name = "observer"
version = "0.1.2"
description = "Observer API"
authors = ["Sultan Iman <sultan.imanhodjaev[at]gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
pytoolz = "^0.1.7"
alembic = "^1.9.4"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.4"}
pydantic = {extras = ["dotenv"], version = "^1.10.5"}
python-dotenv = "^1.0.0"
typer = "^0.7.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
shortuuid = "^1.0.11"
types-SQLAlchemy = "^1.4.53.32"
cryptography = "^39.0.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
structlog = "^22.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pyjwt = "^2.6.0"
email-validator = "^1.3.1"
password-strength = "^0.0.3.post2"
pyotp = "^2.8.0"
qrcode = "^7.4.2"
pillow = "^9.4.0"
jarowinkler = "^1.2.3"
python-box = {extras = ["all"], version = "^7.0.1"}
aioboto3 = "^10.4.0"
aiofiles = "^23.1.0"
python-multipart = "^0.0.5"
sendgrid = "^6.9.7"
aiosmtplib = "^2.0.1"
rich = "^13.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-pretty = "^1.1.0"
ruff = "^0.0.252"
httpx = "^0.23.3"
flask = "^2.2.3"
flask-cors = "^3.0.10"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.0.1"
pre-commit = "^3.1.0"
autoflake = "^2.0.1"
moto = {extras = ["s3"], version = "^4.1.3"}
types-aiofiles = "^22.1.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.black]
line-length = 120
target-version = ["py310"]
include = "\\.pyi?$"
extend-exclude = """
/(
  # The following are specific to Black, you probably don't want those.
  | \\.venv
  | \\.git
  | \\.idea
  | \\.ipynb
)/
"""
preview = true

[tool.mypy]
exclude = [".venv", ".git", ".idea", "tests"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
src_paths = ["migrations", "observer", "tests"]

[tool.ruff]
line-length = 120
ignore = ["E999"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
recursive = true
in-place = true
exclude = ".venv,.git,.idea"

[tool.pytest.ini_options]
asyncio_mode = "auto"

addopts = """
    --cov=observer \
    --cov-report=term-missing \
    --cov-report=xml:reports/coverage.xml \
    --cov-report=html:reports/html \
    --junit-xml=reports/tests.xml \
    --no-cov-on-fail \
    --durations=0
"""

filterwarnings = [
    "ignore::DeprecationWarning:qrcode.*"
]

[tool.coverage.run]
branch = true
relative_files = false
source = ["observer"]

[tool.coverage.report]
show_missing = true
