[tool.poetry]
name = "observer"
version = "0.1.2"
description = "Observer API"
authors = ["Sultan Iman <sultan.imanhodjaev[at]gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
pytoolz = "^0.1.7"
alembic = "^1.13.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.23"}
pydantic = {extras = ["dotenv"], version = "^2.5.2"}
python-dotenv = "^1.0.0"
typer = "^0.9.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.2"
shortuuid = "^1.0.11"
types-SQLAlchemy = "^1.4.53.38"
cryptography = "^41.0.7"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
structlog = "^23.2.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
email-validator = "^2.1.0.post1"
password-strength = "^0.0.3.post2"
pyotp = "^2.9.0"
qrcode = "^7.4.2"
pillow = "^10.1.0"
jarowinkler = "^2.0.1"
python-box = {extras = ["all"], version = "^7.1.1"}
aioboto3 = "^12.1.0"
aiofiles = "^23.2.1"
python-multipart = "^0.0.6"
sendgrid = "^6.11.0"
aiosmtplib = "^3.0.1"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
pytest-pretty = "^1.2.0"
ruff = "^0.1.8"
httpx = "^0.25.2"
flask = "^3.0.0"
flask-cors = "^4.0.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
moto = {extras = ["s3"], version = "^4.2.12"}
types-aiofiles = "^23.2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.mypy]
exclude = [".venv", ".git", ".idea", "tests"]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
follow_imports = "silent"

[tool.ruff]
line-length = 120
ignore = ["E999"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

addopts = """
    --cov=observer \
    --cov-report=term-missing \
    --cov-report=xml:reports/coverage.xml \
    --cov-report=html:reports/html \
    --junit-xml=reports/tests.xml \
    --no-cov-on-fail \
    --durations=0
"""

filterwarnings = [
    "ignore::DeprecationWarning:qrcode.*"
]

[tool.coverage.run]
branch = true
relative_files = false
source = ["observer"]

[tool.coverage.report]
show_missing = true
