[project]
name = "observer"
version = "0.5.0"
description = """
A backend system and database for supporting displaced people
and animals, enabling custom UI development for legal and humane aid.
"""
authors = [{ name = "Sultan Iman", email = "sultan_iman@icloud.com" }]
dependencies = [
    "fastapi>=0.110.2",
    "pydantic>=2.7.1",
    "sqlalchemy[asyncio]>=2.0.29",
    "alembic>=1.13.1",
    "cryptography>=42.0.5",
    "typer>=0.12.3",
    "asyncpg>=0.29.0",
    "shortuuid>=1.0.13",
    "structlog>=24.1.0",
    "pyjwt>=2.8.0",
    "jarowinkler>=2.0.1",
    "python-box>=7.1.1",
    "aiofiles>=23.2.1",
    "passlib>=1.7.4",
    "pyotp>=2.9.0",
    "qrcode>=7.4.2",
    "password-strength>=0.0.3.post2",
    "bcrypt>=4.1.2",
    "pydantic-settings>=2.2.1",
    "psycopg2-binary>=2.9.9",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache 2.0" }

[project.optional-dependencies]
dev = [
    "ruff>=0.4.2",
    "pytest>=8.1.1",
    "pytest-mock>=3.14.0",
    "pytest-pretty>=1.2.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "types-aiofiles>=23.2.0.20240403",
]
docs = [
    "sphinx>=7.2.6",
    "sphinxawesome-theme>=5.1.4",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pyright]
venv = ".venv"
venvPath = "."
